force-app/main/default/objects/API_Setting__mdt/API_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configurações dinâmicas da api salesforce broker</description>
    <label>API Setting</label>
    <pluralLabel>API Settings</pluralLabel>
</CustomObject>