force-app/main/default/objects/API_Setting__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Método da requisição</description>
    <label>Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>