force-app/main/default/objects/API_Setting__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>timeout da requisição, em segundos</description>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>