force-app/main/default/objects/API_Setting__mdt/fields/URL_Path__c.field-meta.xml
<CustomField>
    <fullName>URL_Path__c</fullName>
    <description>URL da request</description>
    <label>URL Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>